# mobile-rust

./: build.gradle  settings.gradle
android/: build.gradle
android/src/androidTest/java/org/wesj/mobilerust/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/org/wesj/mobilerust/: CycloneMessage.kt  CycloneMessageRequest.kt  JNI.kt  MainActivity.kt
android/src/main/res/layout/: activity_main.xml
android/src/test/java/org/wesj/mobilerust/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: atcf.rs  jni.rs  lib.rs
