[package]
name = "mobilerust"
version = "0.1.0"
authors = ["Wes Jordan <wes@wesj.org>"]
edition = "2018"

[dependencies]
jni = "0.5.2"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde-xml-rs = "0.5"
log = "0.4"

[dependencies.reqwest]
version = "0.11.0"
default-features = false
features = ["json", "blocking", "rustls-tls"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[lib]
crate_type = ["staticlib", "dylib"]